--- a/README
+++ b/README
@@ -20,6 +20,10 @@ This layer depends on:
   layers: meta-cryptocurrency
   branch: master
 
+  URI: git://git.yoctoproject.org/meta-ti
+  layers: meta-ti
+  branch: rocko
+
 
 Patches
 =======
@@ -57,6 +61,10 @@ other layers needed. e.g.:
     /path/to/yocto/meta-yocto-bsp \
     /path/to/yocto/meta-cryptocurrency \
     /path/to/yocto/meta-cryptoblack \
+    /path/to/yocto/meta-ti \
+    /path/to/yocto/meta-openembedded/meta-networking \
+    /path/to/yocto/meta-openembedded/meta-python \
+    /path/to/yocto/meta-openembedded/meta-oe \
     "
 
 
